# Project-Arivom

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  lighthouserc.json  package-lock.json  package.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  cluster-news.yml  news-poller.yml  pipelines.yml  qa-weekly.yml  vacancy-monitor.yml
docs/: DECISIONS.md  DESIGN.md  PLAN.md
messages/: en.json  ta.json
pipelines/: README.md  pyproject.toml
pipelines/arivom/: articles.py  cluster_news.py  common.py  import_affidavits.py  import_constituencies.py  import_corrections.py  import_geometries.py  import_jjm.py  import_lgd.py  import_ministers.py  import_nfhs.py  import_representatives.py  import_udise.py  import_vacancies.py  llm.py  monitor_vacancies.py  poll_news.py  qa_sample.py
pipelines/data/: corrections.json  curated_names_ta.json  outlets.json  status_notes.json  vacancies_2026.json
public/: sw.js
scripts/: brand-assets.mjs
src/: proxy.ts
src/app/: globals.css  manifest.ts  robots.ts  sitemap.ts
src/app/[locale]/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/[locale]/about/: page.tsx
src/components/: coverage-dots.tsx  filter-list.tsx  follow-toggle.tsx  forget-footprints.tsx  knowledge-map.tsx  locale-switcher.tsx  locate-button.tsx  news-feed.tsx  place-toggle.tsx  provenance-chip.tsx  seen-tracker.tsx  share-button.tsx  site-footer.tsx  site-header.tsx  story-card.tsx  story-thumb.tsx  sw-register.tsx  tab-bar.tsx
src/i18n/: routing.ts
src/lib/: civic-rank.ts  db.ts  departments.ts  inr.ts  outlets.ts  places-actions.ts  places-shared.ts  places.ts  queries.ts  site.ts
supabase/: config.toml
supabase/migrations/: 20260703100000_core_schema.sql  20260704000000_spatial_extraction_method.sql  20260704010000_persons_external_ref.sql  20260704020000_persons_name_ta_nullable.sql  20260704030000_facts_unique_upsert.sql  20260705100000_news_items_provenance.sql  20260705200000_news_clustering.sql  20260706090000_story_images_coverage_notes.sql  20260706150000_editorial_layer.sql  20260706210000_story_markers.sql  20260707200000_sources_cadence.sql  20260707210000_corrections.sql
(+17 files in other folders)
