[project]
name = "arivom-pipelines"
version = "0.1.0"
description = "Data ingestion pipelines for Arivom. Run by GitHub Actions cron, never at page-request time."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "psycopg[binary]>=3.2",
    "beautifulsoup4>=4.15.0",
    "dbfread>=2.0.7",
    "pyshp>=3.1.4",
]

[project.scripts]
import-lgd = "arivom.import_lgd:main"
import-constituencies = "arivom.import_constituencies:main"
import-geometries = "arivom.import_geometries:main"
import-representatives = "arivom.import_representatives:main"

[dependency-groups]
dev = ["ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arivom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
